fix button click, horizontal scroll
Fix button click, removed horizontal scroll + added animation text ( connected new script for animation in the file 'index.html')+ change img format "png"

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,7 +1,11 @@
 /* @media screen and (max-width: 320px) */
 
+body, html {
+    overflow-x: hidden; 
+}
+
 .hero-section {
-    background-image: url('../img/hero/hero_red_mobile_1x.webp');
+    background-image: url('../img/hero/png tablet-mobile/hero_red_mobile_1x.png');
     background-repeat: no-repeat;
     background-position: left;
     background-size: contain;
@@ -11,7 +15,7 @@
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     .hero-section {
-        background-image: url('../img/hero/hero_red_mobile_2x.webp');
+        background-image: url('../img/hero/png tablet-mobile/hero_red_mobile_2x.png');
     }
 }
 
@@ -64,6 +68,15 @@
     transition: border-color 250ms linear, box-shadow 250ms linear;
 }
 
+.hero-social-link a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;   
+    height: 100%;  
+    padding: 0;    
+}
+
 .hero-email {
     font-style: normal;
     font-size: 14px;
@@ -105,12 +118,12 @@
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
     .hero-section {
-        background-image: url(../img/hero/hero_red_tablet_1x.webp);
+        background-image: url('../img/hero/png tablet-mobile/hero_red_tablet_1x.png');
     }
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
         .hero-section {
-            background-image: url(../img/hero/hero_red_tablet_2x.webp);
+            background-image: url('../img/hero/png tablet-mobile/hero_red_tablet_2x.png');
         }
     }
 
@@ -161,13 +174,13 @@
 
 @media screen and (min-width: 1440px) {
     .hero-section {
-        background-image: url(../img/hero/desktop/hero_red_desktop_1x.webp);
+        background-image: url('../img/hero/desktop/png/hero_red_desktop_1x.png');
         margin-bottom: 96px;
     }
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
         .hero-section {
-            background-image: url(../img/hero/desktop/hero_red_desktop_2x.webp);
+            background-image: url('../img/hero/desktop/png/hero_red_desktop_2x.png');
         }
     }
 
